# cowork-workspace-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/workspace_service/: config.py  dependencies.py  exceptions.py  main.py  middleware.py
src/workspace_service/clients/: session_client.py
src/workspace_service/models/: domain.py  requests.py
src/workspace_service/repositories/: base.py  dynamo_artifact.py  dynamo_workspace.py  memory.py  s3_store.py
src/workspace_service/routes/: artifacts.py  files.py  health.py  workspaces.py
src/workspace_service/services/: artifact_service.py  file_service.py  workspace_service.py
tests/: conftest.py  test_artifact_service.py  test_integration.py  test_routes.py  test_session_client.py  test_workspace_files.py  test_workspace_service.py
tests/service/: conftest.py  test_artifact_repo.py  test_workspace_repo.py
tests/unit/: test_middleware.py
