[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowork-workspace-service"
version = "0.1.0"
description = "Workspace and artifact storage service for the cowork platform."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0,<26.0",
    "aioboto3>=13.0,<15.0",
    "tenacity>=8.0,<10.0",
    "cowork-platform[sdk]",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "coverage>=7.0,<8.0",
    "httpx>=0.27,<1.0",
    "build>=1.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/workspace_service"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/**/routes/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["cowork_platform", "cowork_platform.*", "cowork_platform_sdk", "cowork_platform_sdk.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*", "aiobotocore", "aiobotocore.*", "boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no infrastructure)",
    "service: Service tests (DynamoDB Local)",
    "integration: Integration tests (LocalStack)",
]

[tool.coverage.run]
source = ["workspace_service"]
omit = [
    "tests/*",
    "src/workspace_service/main.py",
    "src/workspace_service/repositories/dynamo_*.py",
    "src/workspace_service/repositories/s3_store.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
